--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,11 @@ code {
   display: block;
   color: red;
 }
+
+.description.is-visible1 {
+  display: block;
+
+}
 .selected {
   padding:10px; 
   background: #2c3e50;
@@ -59,6 +64,7 @@ code {
   margin: 20px;
   cursor: pointer;
 }
+
 
 .inputSearch{
     color: gray;
@@ -87,7 +93,7 @@ form{
   display: flex;
   margin-top: 50px
 }
-.inputTask{
+#inputTask{
   width: 656px;
   height: 32px;
   border:1px solid rgb(204, 204, 204);
@@ -96,7 +102,7 @@ form{
   padding-left: 10px;
 }
 
-.btnTask{
+#btnTask{
   border: 1px solid rgb(204, 204, 204);
   border-left: none;
   background-color: black;
